--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics: 
+    analytics: jutmHvzkeNqLMouXPs2mlIPXlmSnlaVOv5x-vuUpEPc
     verify: 
     ad-client: 
     ad-slot: 
